[package]
name = "mqttest"
version = "0.1.0"
authors = ["Vincent de Phily <moltonel@gmail.com>"]
edition = "2018"
description = "An MQTT server designed for unittesting MQTT clients."
keywords = ["mqtt", "server", "test", "unittest"]
categories = ["development-tools.categories.testing", "network-programming"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/vincentdephily/mqttest"
repository = "https://github.com/vincentdephily/mqttest"

[dependencies]
bytes = "0.5.3"
futures = "0.3.1"
log = "0.4.7"
#mqttrs = "0.2.0"
mqttrs = { git = "https://github.com/vincentdephily/mqttrs", rev = "27e9f1ea78ada4d4cd5b99dd1101637b27875c78" }
serde =  { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
time = "0.2.1"
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }

#[[bin]]
#required-features = ["cli"]
structopt = "0.3.1"
env_logger = "0.7.0"
rand = "0.7.2"
