[package]
name = "mqttest"
version = "0.1.0"
authors = ["Vincent de Phily <moltonel@gmail.com>"]
edition = "2018"
description = "An MQTT server designed for unittesting MQTT clients."
keywords = ["mqtt", "server", "test", "unittest"]
categories = ["development-tools.categories.testing", "network-programming"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/vincentdephily/mqttest"
repository = "https://github.com/vincentdephily/mqttest"

[features]
default = []
cli = ["structopt", "env_logger"]

[dependencies]
bytes = "0.5.3"
env_logger = { version = "0.7.0", optional = true }
futures = "0.3.1"
log = "0.4.7"
mqttrs = "0.3.0"
rand = "0.7.2"
serde =  { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
structopt = { version = "0.3.1", optional = true }
time = "0.2.1"
tokio = { version = "0.2.6", features = ["io-util", "macros", "net", "rt-threaded", "sync", "stream", "time"] }
tokio-util = { version = "0.2.0", features = ["codec"] }

[dev-dependencies]
env_logger = "0.7.0"

[[bin]]
required-features = ["cli"]
name = "mqttest"
