[package]
name = "mqttest"
version = "0.2.0"
authors = ["Vincent de Phily <moltonel@gmail.com>"]
edition = "2018"
rust-version = "1.74.0"
description = "An MQTT server designed for unittesting MQTT clients."
keywords = ["mqtt", "server", "test", "unittest"]
categories = ["development-tools::testing", "network-programming", "command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/vincentdephily/mqttest"
repository = "https://github.com/vincentdephily/mqttest"

[features]
default = ["cli"]
cli = ["clap", "env_logger"]

[dependencies]
bytes = "1.6.0"
env_logger = { version = "0.11.0", optional = true }
futures = "0.3.30"
log = "0.4.11"
# Not ready to move to 0.4 yet due to painful explicit lifetimes, but we need this commit for the updated bytes crate
mqttrs = { version = "0.3.0", git = "https://github.com/00imvj00/mqttrs/", rev = "cebb5b21e6f381b0d009f5a5c3153a23365aaa04" }
rand = "0.8.5"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
clap = { version = "4.5.0", optional = true, features = ["derive"] }
time = {version = "0.3.0", features = ["serde"]}
tokio = { version = "1.37.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
env_logger = "0.11.0"
assert_matches = "1.3.0"

[[bin]]
required-features = ["cli"]
name = "mqttest"
